// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`As Menu 1`] = `
<menu style="list-style: none; padding: 0px;">
  <li>
    <button
      data-variant="secondary"
      type="button"
    >
      Kopier
    </button>
  </li>
  <li>
    <button
      data-variant="secondary"
      type="button"
    >
      Klipp ut
    </button>
  </li>
  <li>
    <button
      data-variant="secondary"
      type="button"
    >
      Lim inn
    </button>
  </li>
</menu>
`;

exports[`As Nav 1`] = `
<nav aria-label="Snarveier">
  <ul style="list-style: none; padding: 0px;">
    <li>
      <a
        href="https://www.udir.no/utdanningslopet/barnehage/"
        target="_blank"
      >
        Barnehage
      </a>
    </li>
    <li>
      <a
        href="https://www.udir.no/utdanningslopet/grunnskole/"
        target="_blank"
      >
        Grunnskole
      </a>
    </li>
    <li>
      <a
        href="https://www.udir.no/utdanningslopet/videregaende-opplaring/"
        target="_blank"
      >
        Videregående
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Indented 1`] = `
<h2 data-size="xs">
  Innhold
</h2>
<ol style="margin-top: var(--ds-size-2);">
  <li>
    Barnehagens verdigrunnlag
    <ul>
      <li>
        Barn og barndom
      </li>
      <li>
        Demokrati
      </li>
      <li>
        Mangfold og gjensidig respekt
      </li>
    </ul>
  </li>
  <li>
    Ansvar og roller
    <ul>
      <li>
        Barnehageeier
      </li>
      <li>
        Styrer
      </li>
      <li>
        Pedagogisk leder
      </li>
    </ul>
  </li>
  <li>
    Barnehagens formål og innhold
    <ul>
      <li>
        Barnehagen skal ivareta barnas behov for omsorg
      </li>
      <li>
        Barnehagen skal ivareta barnas behov for lek
      </li>
      <li>
        List Item 3.3
      </li>
    </ul>
  </li>
</ol>
`;

exports[`Ordered 1`] = `
<h2
  data-size="xs"
  style="margin-bottom: var(--ds-size-2);"
>
  Slik gjennomfører dere metoden:
</h2>
<ol>
  <li>
    Presentere en problemstilling
  </li>
  <li>
    Refleksjon og summing: deltakerne går sammen to og to
  </li>
  <li>
    Gjennomgang i plenum
  </li>
  <li>
    Noter ned viktig innspill og refleksjoner
  </li>
</ol>
`;

exports[`Preview 1`] = `
<ul>
  <li>
    List Item 1
  </li>
  <li>
    List Item 2
  </li>
  <li>
    List Item 3
  </li>
</ul>
`;

exports[`Unordered 1`] = `
<h2
  data-size="xs"
  style="margin-bottom: var(--ds-size-2);"
>
  Gjennom arbeid med kommunikasjon, språk og tekst skal barnehagen bidra til at barna
</h2>
<ul>
  <li>
    uttrykker sine følelser, tanker, meninger og erfaringer på ulike måter
  </li>
  <li>
    bruker språk til å skape relasjoner, delta i lek og som redskap til å løse konflikter
  </li>
  <li>
    videreutvikler sin begrepsforståelse og bruker et variert ordforråd
  </li>
</ul>
`;

exports[`With Heading 1`] = `
<div style="display: flex; gap: 2rem; flex-wrap: wrap;">
  <div>
    <h2
      data-size="2xs"
      style="margin-bottom: var(--ds-size-2);"
    >
      List sm og Heading 2xs
    </h2>
    <ul data-size="sm">
      <li>
        <a
          href="https://www.udir.no/om-udir/designprofil/identitet/"
          target="_blank"
        >
          Identitet
        </a>
      </li>
      <li>
        <a
          href="https://www.udir.no/om-udir/designprofil/farger/"
          target="_blank"
        >
          Farger
        </a>
      </li>
      <li>
        <a
          href="https://www.udir.no/om-udir/designprofil/typografi/"
          target="_blank"
        >
          Typografi
        </a>
      </li>
    </ul>
  </div>
  <div>
    <h2
      data-size="xs"
      style="margin-bottom: var(--ds-size-2);"
    >
      List md og Heading xs
    </h2>
    <ul data-size="md">
      <li>
        <a
          href="https://www.udir.no/om-udir/designprofil/identitet/"
          target="_blank"
        >
          Identitet
        </a>
      </li>
      <li>
        <a
          href="https://www.udir.no/om-udir/designprofil/farger/"
          target="_blank"
        >
          Farger
        </a>
      </li>
      <li>
        <a
          href="https://www.udir.no/om-udir/designprofil/typografi/"
          target="_blank"
        >
          Typografi
        </a>
      </li>
    </ul>
  </div>
  <div>
    <h2
      data-size="sm"
      style="margin-bottom: var(--ds-size-2);"
    >
      List lg og Heading sm
    </h2>
    <ul data-size="lg">
      <li>
        <a
          href="https://www.udir.no/om-udir/designprofil/identitet/"
          target="_blank"
        >
          Identitet
        </a>
      </li>
      <li>
        <a
          href="https://www.udir.no/om-udir/designprofil/farger/"
          target="_blank"
        >
          Farger
        </a>
      </li>
      <li>
        <a
          href="https://www.udir.no/om-udir/designprofil/typografi/"
          target="_blank"
        >
          Typografi
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`With Links 1`] = `
<ul style="list-style: none; padding: 0px;">
  <li>
    <a
      href="https://www.udir.no/om-udir/designprofil/identitet/"
      target="_blank"
    >
      Identitet
    </a>
  </li>
  <li>
    <a
      href="https://www.udir.no/om-udir/designprofil/farger/"
      target="_blank"
    >
      Farger
    </a>
  </li>
  <li>
    <a
      href="https://www.udir.no/om-udir/designprofil/typografi/"
      target="_blank"
    >
      Typografi
    </a>
  </li>
</ul>
`;
